istioctl/cmd/istioctl/convert/testdata/v1alpha1/another-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: simple-ingress
spec:
  rules:
    - http:
        paths:
          - path: /foo/bar/
            backend:
              serviceName: anotherservice-service
              servicePort: 7080
