istioctl/cmd/istioctl/convert/testdata/v1alpha1/destination-policy-helloworld.yaml
apiVersion: config.istio.io/v1beta1
kind: DestinationPolicy
metadata:
  name: helloworld-circuit-breaker
spec:
  destination:
    name: helloworld-service
    labels:
      version: "1.0"
  circuitBreaker:
    simpleCb:
      maxConnections: 1
      httpMaxPendingRequests: 1
      sleepWindow: 3m
      httpDetectionInterval: 1s
      httpMaxEjectionPercent: 100
      httpConsecutiveErrors: 1
      httpMaxRequestsPerConnection: 1
