istioctl/cmd/istioctl/convert/testdata/v1alpha1/egress-rule-httpbin.yaml
apiVersion: config.istio.io/v1alpha2
kind: EgressRule
metadata:
  name: httpbin
spec:
  destination:
      service: "httpbin.org"
  ports:
      - port: 80
        protocol: http
  use_egress_proxy: false
