istioctl/cmd/istioctl/convert/testdata/v1alpha1/myservice-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: simple-ingress
spec:
  rules:
    - http:
        paths:
          - path: /foo/.*
            backend:
              serviceName: myservice-service
              servicePort: 9080
          - path: /.*
            backend:
              serviceName: my-ui
              servicePort: 80
