istioctl/cmd/istioctl/convert/testdata/v1alpha1/nolabel-destination-policy.yaml
apiVersion: config.istio.io/v1beta1
kind: DestinationPolicy
metadata:
  name: helloworld-circuit-breaker
spec:
  destination:
    name: alpha-service
  circuitBreaker:
    simpleCb:
      maxConnections: 64
      httpMaxPendingRequests: 16
      sleepWindow: 1m
      httpDetectionInterval: 10s
      httpMaxEjectionPercent: 100
      httpConsecutiveErrors: 2
      httpMaxRequestsPerConnection: 2
