istioctl/cmd/istioctl/convert/testdata/v1alpha1/route-rule-80-20.yaml
apiVersion: config.istio.io/v1alpha2
kind: RouteRule
metadata:
  name: route-rule-80-20
spec:
  destination:
    name: helloworld-service
  precedence: 1
  route:
  - labels:
      version: "1.0"
    weight: 80
  - labels:
      version: "2.0"
    weight: 20
